[gd_scene load_steps=11 format=4 uid="uid://cdnqeyk8omo0f"]

[ext_resource type="Script" path="res://Scripts/UI/main menu/menu.gd" id="1_33ery"]
[ext_resource type="TileSet" uid="uid://blqu28xiva5i8" path="res://Assets/tilesets/tileset_terrains.tres" id="1_a3f0a"]
[ext_resource type="Texture2D" uid="uid://duo3vqxpifshy" path="res://UI/Buttons/Button_Hover_3Slides.png" id="2_un5u3"]
[ext_resource type="Texture2D" uid="uid://clcqel5dd5304" path="res://UI/Buttons/Button_Blue_3Slides.png" id="3_8c42l"]
[ext_resource type="PackedScene" uid="uid://dmh5kqukb42js" path="res://Scenes/Levels/level 1/Level1.tscn" id="3_elvaw"]
[ext_resource type="Texture2D" uid="uid://b2i7j4x8k1aii" path="res://UI/Buttons/Button_Red_3Slides.png" id="4_0mr1f"]
[ext_resource type="PackedScene" uid="uid://2goai1heegcp" path="res://Scenes/Levels/level 1/path1.tscn" id="4_06me2"]
[ext_resource type="Texture2D" uid="uid://4n8eb0dvlcxe" path="res://UI/Buttons/Button_Blue_3Slides_Pressed.png" id="4_caxi6"]
[ext_resource type="Texture2D" uid="uid://m688epmnqy1" path="res://UI/Buttons/Button_Red_3Slides_Pressed.png" id="7_f3o2h"]

[sub_resource type="FontVariation" id="FontVariation_smhxl"]
spacing_glyph = 2

[node name="UI" type="CanvasLayer"]

[node name="Water" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAgAAAAAAAEAAQAAAAgAAAAAAAIAAQAAAAgAAAAAAAMAAQAAAAgAAAAAAAQAAQAAAAgAAAAAAAUAAQAAAAgAAAAAAAYAAQAAAAgAAAAAAAcAAQAAAAgAAAAAAAgAAQAAAAgAAAAAAAkAAQAAAAgAAAAAAAoAAQAAAAgAAAAAAAsAAQAAAAgAAAAAAAwAAQAAAAgAAAAAAA0AAQAAAAgAAAAAAA4AAQAAAAgAAAAAAA8AAQAAAAgAAAAAABAAAQAAAAgAAAABAAAAAQAAAAgAAAABAAEAAQAAAAgAAAABAAMAAQAAAAgAAAABAAQAAQAAAAgAAAABAAUAAQAAAAgAAAABAAYAAQAAAAgAAAABAAcAAQAAAAgAAAABAAgAAQAAAAgAAAABAAkAAQAAAAgAAAABAAoAAQAAAAgAAAABAAsAAQAAAAgAAAABAAwAAQAAAAgAAAABAA0AAQAAAAgAAAABAA4AAQAAAAgAAAABAA8AAQAAAAgAAAABABAAAQAAAAgAAAACAAAAAQAAAAgAAAACAAEAAQAAAAgAAAACAAIAAQAAAAgAAAACAAMAAQAAAAgAAAACAAQAAQAAAAgAAAACAAUAAQAAAAgAAAACAAYAAQAAAAgAAAACAAcAAQAAAAgAAAACAAgAAQAAAAgAAAACAAkAAQAAAAgAAAACAAoAAQAAAAgAAAACAAsAAQAAAAgAAAACAAwAAQAAAAgAAAACAA0AAQAAAAgAAAACAA4AAQAAAAgAAAACAA8AAQAAAAgAAAACABAAAQAAAAgAAAADAAAAAQAAAAgAAAADAAEAAQAAAAgAAAADAAIAAQAAAAgAAAADAAMAAQAAAAgAAAADAAQAAQAAAAgAAAADAAUAAQAAAAgAAAADAAYAAQAAAAgAAAADAAcAAQAAAAgAAAADAAgAAQAAAAgAAAADAAkAAQAAAAgAAAADAAoAAQAAAAgAAAADAAsAAQAAAAgAAAADAAwAAQAAAAgAAAADAA0AAQAAAAgAAAADAA4AAQAAAAgAAAADAA8AAQAAAAgAAAADABAAAQAAAAgAAAAEAAAAAQAAAAgAAAAEAAEAAQAAAAgAAAAEAAIAAQAAAAgAAAAEAAMAAQAAAAgAAAAEAAQAAQAAAAgAAAAEAAUAAQAAAAgAAAAEAAYAAQAAAAgAAAAEAAcAAQAAAAgAAAAEAAgAAQAAAAgAAAAEAAkAAQAAAAgAAAAEAAoAAQAAAAgAAAAEAAsAAQAAAAgAAAAEAAwAAQAAAAgAAAAEAA0AAQAAAAgAAAAEAA4AAQAAAAgAAAAEAA8AAQAAAAgAAAAEABAAAQAAAAgAAAAFAAAAAQAAAAgAAAAFAAEAAQAAAAgAAAAFAAIAAQAAAAgAAAAFAAMAAQAAAAgAAAAFAAQAAQAAAAgAAAAFAAUAAQAAAAgAAAAFAAYAAQAAAAgAAAAFAAcAAQAAAAgAAAAFAAgAAQAAAAgAAAAFAAkAAQAAAAgAAAAFAAoAAQAAAAgAAAAFAAsAAQAAAAgAAAAFAAwAAQAAAAgAAAAFAA0AAQAAAAgAAAAFAA4AAQAAAAgAAAAFAA8AAQAAAAgAAAAFABAAAQAAAAgAAAAGAAAAAQAAAAgAAAAGAAEAAQAAAAgAAAAGAAIAAQAAAAgAAAAGAAMAAQAAAAgAAAAGAAQAAQAAAAgAAAAGAAUAAQAAAAgAAAAGAAYAAQAAAAgAAAAGAAcAAQAAAAgAAAAGAAgAAQAAAAgAAAAGAAkAAQAAAAgAAAAGAAoAAQAAAAgAAAAGAAsAAQAAAAgAAAAGAAwAAQAAAAgAAAAGAA0AAQAAAAgAAAAGAA4AAQAAAAgAAAAGAA8AAQAAAAgAAAAGABAAAQAAAAgAAAAHAAAAAQAAAAgAAAAHAAEAAQAAAAgAAAAHAAIAAQAAAAgAAAAHAAMAAQAAAAgAAAAHAAQAAQAAAAgAAAAHAAUAAQAAAAgAAAAHAAYAAQAAAAgAAAAHAAcAAQAAAAgAAAAHAAgAAQAAAAgAAAAHAAkAAQAAAAgAAAAHAAoAAQAAAAgAAAAHAAsAAQAAAAgAAAAHAAwAAQAAAAgAAAAHAA0AAQAAAAgAAAAHAA4AAQAAAAgAAAAHAA8AAQAAAAgAAAAHABAAAQAAAAgAAAAIAAAAAQAAAAgAAAAIAAEAAQAAAAgAAAAIAAIAAQAAAAgAAAAIAAMAAQAAAAgAAAAIAAQAAQAAAAgAAAAIAAUAAQAAAAgAAAAIAAYAAQAAAAgAAAAIAAcAAQAAAAgAAAAIAAgAAQAAAAgAAAAIAAkAAQAAAAgAAAAIAAoAAQAAAAgAAAAIAAsAAQAAAAgAAAAIAAwAAQAAAAgAAAAIAA0AAQAAAAgAAAAIAA4AAQAAAAgAAAAIAA8AAQAAAAgAAAAIABAAAQAAAAgAAAAJAAAAAQAAAAgAAAAJAAEAAQAAAAgAAAAJAAIAAQAAAAgAAAAJAAMAAQAAAAgAAAAJAAQAAQAAAAgAAAAJAAUAAQAAAAgAAAAJAAYAAQAAAAgAAAAJAAcAAQAAAAgAAAAJAAgAAQAAAAgAAAAJAAkAAQAAAAgAAAAJAAoAAQAAAAgAAAAJAAsAAQAAAAgAAAAJAAwAAQAAAAgAAAAJAA0AAQAAAAgAAAAJAA4AAQAAAAgAAAAJAA8AAQAAAAgAAAAJABAAAQAAAAgAAAAKAAAAAQAAAAgAAAAKAAEAAQAAAAgAAAAKAAIAAQAAAAgAAAAKAAMAAQAAAAgAAAAKAAQAAQAAAAgAAAAKAAUAAQAAAAgAAAAKAAYAAQAAAAgAAAAKAAcAAQAAAAgAAAAKAAgAAQAAAAgAAAAKAAkAAQAAAAgAAAAKAAoAAQAAAAgAAAAKAAsAAQAAAAgAAAAKAAwAAQAAAAgAAAAKAA0AAQAAAAgAAAAKAA4AAQAAAAgAAAAKAA8AAQAAAAgAAAAKABAAAQAAAAgAAAALAAAAAQAAAAgAAAALAAEAAQAAAAgAAAALAAIAAQAAAAgAAAALAAMAAQAAAAgAAAALAAQAAQAAAAgAAAALAAUAAQAAAAgAAAALAAYAAQAAAAgAAAALAAcAAQAAAAgAAAALAAgAAQAAAAgAAAALAAkAAQAAAAgAAAALAAoAAQAAAAgAAAALAAsAAQAAAAgAAAALAAwAAQAAAAgAAAALAA0AAQAAAAgAAAALAA4AAQAAAAgAAAALAA8AAQAAAAgAAAALABAAAQAAAAgAAAAMAAAAAQAAAAgAAAAMAAEAAQAAAAgAAAAMAAIAAQAAAAgAAAAMAAMAAQAAAAgAAAAMAAQAAQAAAAgAAAAMAAUAAQAAAAgAAAAMAAYAAQAAAAgAAAAMAAcAAQAAAAgAAAAMAAgAAQAAAAgAAAAMAAkAAQAAAAgAAAAMAAoAAQAAAAgAAAAMAAsAAQAAAAgAAAAMAAwAAQAAAAgAAAAMAA0AAQAAAAgAAAAMAA4AAQAAAAgAAAAMAA8AAQAAAAgAAAAMABAAAQAAAAgAAAANAAAAAQAAAAgAAAANAAEAAQAAAAgAAAANAAIAAQAAAAgAAAANAAMAAQAAAAgAAAANAAQAAQAAAAgAAAANAAUAAQAAAAgAAAANAAYAAQAAAAgAAAANAAcAAQAAAAgAAAANAAgAAQAAAAgAAAANAAkAAQAAAAgAAAANAAoAAQAAAAgAAAANAAsAAQAAAAgAAAANAAwAAQAAAAgAAAANAA0AAQAAAAgAAAANAA4AAQAAAAgAAAANAA8AAQAAAAgAAAANABAAAQAAAAgAAAAOAAAAAQAAAAgAAAAOAAEAAQAAAAgAAAAOAAIAAQAAAAgAAAAOAAMAAQAAAAgAAAAOAAQAAQAAAAgAAAAOAAUAAQAAAAgAAAAOAAYAAQAAAAgAAAAOAAcAAQAAAAgAAAAOAAgAAQAAAAgAAAAOAAkAAQAAAAgAAAAOAAoAAQAAAAgAAAAOAAsAAQAAAAgAAAAOAAwAAQAAAAgAAAAOAA0AAQAAAAgAAAAOAA4AAQAAAAgAAAAOAA8AAQAAAAgAAAAOABAAAQAAAAgAAAAPAAAAAQAAAAgAAAAPAAEAAQAAAAgAAAAPAAIAAQAAAAgAAAAPAAMAAQAAAAgAAAAPAAQAAQAAAAgAAAAPAAUAAQAAAAgAAAAPAAYAAQAAAAgAAAAPAAcAAQAAAAgAAAAPAAgAAQAAAAgAAAAPAAkAAQAAAAgAAAAPAAoAAQAAAAgAAAAPAAsAAQAAAAgAAAAPAAwAAQAAAAgAAAAPAA0AAQAAAAgAAAAPAA4AAQAAAAgAAAAPAA8AAQAAAAgAAAAPABAAAQAAAAgAAAAQAAAAAQAAAAgAAAAQAAEAAQAAAAgAAAAQAAIAAQAAAAgAAAAQAAMAAQAAAAgAAAAQAAQAAQAAAAgAAAAQAAUAAQAAAAgAAAAQAAYAAQAAAAgAAAAQAAcAAQAAAAgAAAAQAAgAAQAAAAgAAAAQAAkAAQAAAAgAAAAQAAoAAQAAAAgAAAAQAAsAAQAAAAgAAAAQAAwAAQAAAAgAAAAQAA0AAQAAAAgAAAAQAA4AAQAAAAgAAAAQAA8AAQAAAAgAAAAQABAAAQAAAAgAAAARAAAAAQAAAAgAAAARAAEAAQAAAAgAAAARAAIAAQAAAAgAAAARAAMAAQAAAAgAAAARAAQAAQAAAAgAAAARAAUAAQAAAAgAAAARAAYAAQAAAAgAAAARAAcAAQAAAAgAAAARAAgAAQAAAAgAAAARAAkAAQAAAAgAAAARAAoAAQAAAAgAAAARAAsAAQAAAAgAAAARAAwAAQAAAAgAAAARAA0AAQAAAAgAAAARAA4AAQAAAAgAAAARAA8AAQAAAAgAAAARABAAAQAAAAgAAAASAAAAAQAAAAgAAAASAAEAAQAAAAgAAAASAAIAAQAAAAgAAAASAAMAAQAAAAgAAAASAAQAAQAAAAgAAAASAAUAAQAAAAgAAAASAAYAAQAAAAgAAAASAAcAAQAAAAgAAAASAAgAAQAAAAgAAAASAAkAAQAAAAgAAAASAAoAAQAAAAgAAAASAAsAAQAAAAgAAAASAAwAAQAAAAgAAAASAA0AAQAAAAgAAAASAA4AAQAAAAgAAAASAA8AAQAAAAgAAAASABAAAQAAAAgAAAATAAAAAQAAAAgAAAATAAEAAQAAAAgAAAATAAIAAQAAAAgAAAATAAMAAQAAAAgAAAATAAQAAQAAAAgAAAATAAUAAQAAAAgAAAATAAYAAQAAAAgAAAATAAcAAQAAAAgAAAATAAgAAQAAAAgAAAATAAkAAQAAAAgAAAATAAoAAQAAAAgAAAATAAsAAQAAAAgAAAATAAwAAQAAAAgAAAATAA0AAQAAAAgAAAATAA4AAQAAAAgAAAATAA8AAQAAAAgAAAATABAAAQAAAAgAAAAUAAAAAQAAAAgAAAAUAAEAAQAAAAgAAAAUAAIAAQAAAAgAAAAUAAMAAQAAAAgAAAAUAAQAAQAAAAgAAAAUAAUAAQAAAAgAAAAUAAYAAQAAAAgAAAAUAAcAAQAAAAgAAAAUAAgAAQAAAAgAAAAUAAkAAQAAAAgAAAAUAAoAAQAAAAgAAAAUAAsAAQAAAAgAAAAUAAwAAQAAAAgAAAAUAA0AAQAAAAgAAAAUAA4AAQAAAAgAAAAUAA8AAQAAAAgAAAAUABAAAQAAAAgAAAAVAAAAAQAAAAgAAAAVAAEAAQAAAAgAAAAVAAIAAQAAAAgAAAAVAAMAAQAAAAgAAAAVAAQAAQAAAAgAAAAVAAUAAQAAAAgAAAAVAAYAAQAAAAgAAAAVAAcAAQAAAAgAAAAVAAgAAQAAAAgAAAAVAAkAAQAAAAgAAAAVAAoAAQAAAAgAAAAVAAsAAQAAAAgAAAAVAAwAAQAAAAgAAAAVAA0AAQAAAAgAAAAVAA4AAQAAAAgAAAAVAA8AAQAAAAgAAAAVABAAAQAAAAgAAAAWAAAAAQAAAAgAAAAWAAEAAQAAAAgAAAAWAAIAAQAAAAgAAAAWAAMAAQAAAAgAAAAWAAQAAQAAAAgAAAAWAAUAAQAAAAgAAAAWAAYAAQAAAAgAAAAWAAcAAQAAAAgAAAAWAAgAAQAAAAgAAAAWAAkAAQAAAAgAAAAWAAoAAQAAAAgAAAAWAAsAAQAAAAgAAAAWAAwAAQAAAAgAAAAWAA0AAQAAAAgAAAAWAA4AAQAAAAgAAAAWAA8AAQAAAAgAAAAWABAAAQAAAAgAAAAXAAAAAQAAAAgAAAAXAAEAAQAAAAgAAAAXAAIAAQAAAAgAAAAXAAMAAQAAAAgAAAAXAAQAAQAAAAgAAAAXAAUAAQAAAAgAAAAXAAYAAQAAAAgAAAAXAAcAAQAAAAgAAAAXAAgAAQAAAAgAAAAXAAkAAQAAAAgAAAAXAAoAAQAAAAgAAAAXAAsAAQAAAAgAAAAXAAwAAQAAAAgAAAAXAA0AAQAAAAgAAAAXAA4AAQAAAAgAAAAXAA8AAQAAAAgAAAAXABAAAQAAAAgAAAAYAAAAAQAAAAgAAAAYAAEAAQAAAAgAAAAYAAIAAQAAAAgAAAAYAAMAAQAAAAgAAAAYAAQAAQAAAAgAAAAYAAUAAQAAAAgAAAAYAAYAAQAAAAgAAAAYAAcAAQAAAAgAAAAYAAgAAQAAAAgAAAAYAAkAAQAAAAgAAAAYAAoAAQAAAAgAAAAYAAsAAQAAAAgAAAAYAAwAAQAAAAgAAAAYAA0AAQAAAAgAAAAYAA4AAQAAAAgAAAAYAA8AAQAAAAgAAAAYABAAAQAAAAgAAAAZAAAAAQAAAAgAAAAZAAEAAQAAAAgAAAAZAAIAAQAAAAgAAAAZAAMAAQAAAAgAAAAZAAQAAQAAAAgAAAAZAAUAAQAAAAgAAAAZAAYAAQAAAAgAAAAZAAcAAQAAAAgAAAAZAAgAAQAAAAgAAAAZAAkAAQAAAAgAAAAZAAoAAQAAAAgAAAAZAAsAAQAAAAgAAAAZAAwAAQAAAAgAAAAZAA0AAQAAAAgAAAAZAA4AAQAAAAgAAAAZAA8AAQAAAAgAAAAZABAAAQAAAAgAAAAaAAAAAQAAAAgAAAAaAAEAAQAAAAgAAAAaAAIAAQAAAAgAAAAaAAMAAQAAAAgAAAAaAAQAAQAAAAgAAAAaAAUAAQAAAAgAAAAaAAYAAQAAAAgAAAAaAAcAAQAAAAgAAAAaAAgAAQAAAAgAAAAaAAkAAQAAAAgAAAAaAAoAAQAAAAgAAAAaAAsAAQAAAAgAAAAaAAwAAQAAAAgAAAAaAA0AAQAAAAgAAAAaAA4AAQAAAAgAAAAaAA8AAQAAAAgAAAAaABAAAQAAAAgAAAAbAAAAAQAAAAgAAAAbAAEAAQAAAAgAAAAbAAIAAQAAAAgAAAAbAAMAAQAAAAgAAAAbAAQAAQAAAAgAAAAbAAUAAQAAAAgAAAAbAAYAAQAAAAgAAAAbAAcAAQAAAAgAAAAbAAgAAQAAAAgAAAAbAAkAAQAAAAgAAAAbAAoAAQAAAAgAAAAbAAsAAQAAAAgAAAAbAAwAAQAAAAgAAAAbAA0AAQAAAAgAAAAbAA4AAQAAAAgAAAAbAA8AAQAAAAgAAAAbABAAAQAAAAgAAAAcAAAAAQAAAAgAAAAcAAEAAQAAAAgAAAAcAAIAAQAAAAgAAAAcAAMAAQAAAAgAAAAcAAQAAQAAAAgAAAAcAAUAAQAAAAgAAAAcAAYAAQAAAAgAAAAcAAcAAQAAAAgAAAAcAAgAAQAAAAgAAAAcAAkAAQAAAAgAAAAcAAoAAQAAAAgAAAAcAAsAAQAAAAgAAAAcAAwAAQAAAAgAAAAcAA0AAQAAAAgAAAAcAA4AAQAAAAgAAAAcAA8AAQAAAAgAAAAcABAAAQAAAAgAAAAdAAAAAQAAAAgAAAAdAAEAAQAAAAgAAAAdAAIAAQAAAAgAAAAdAAMAAQAAAAgAAAAdAAQAAQAAAAgAAAAdAAUAAQAAAAgAAAAdAAYAAQAAAAgAAAAdAAcAAQAAAAgAAAAdAAgAAQAAAAgAAAAdAAkAAQAAAAgAAAAdAAoAAQAAAAgAAAAdAAsAAQAAAAgAAAAdAAwAAQAAAAgAAAAdAA0AAQAAAAgAAAAdAA4AAQAAAAgAAAAdAA8AAQAAAAgAAAAdABAAAQAAAAgAAAABAAIAAQAAAAgAAAA=")
tile_set = ExtResource("1_a3f0a")

[node name="Water anim" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEAAAAAQAAAAsAAAAFAAAAAQAAAAsAAAAGAAAAAQAAAAsAAAAHAAAAAQAAAAsAAAAIAAAAAQAAAAsAAAAJAAAAAQAAAAsAAAAKAAAAAQAAAAsAAAALAAAAAQAAAAsAAAAMAAAAAQAAAAsAAAAMAAEAAQAAAAsAAAALAAEAAQAAAAsAAAALAAIAAQAAAAsAAAAKAAIAAQAAAAsAAAAKAAMAAQAAAAsAAAAKAAQAAQAAAAsAAAAKAAUAAQAAAAsAAAAKAAYAAQAAAAsAAAAJAAYAAQAAAAsAAAAIAAYAAQAAAAsAAAAHAAYAAQAAAAsAAAAGAAYAAQAAAAsAAAAFAAYAAQAAAAsAAAAEAAYAAQAAAAsAAAADAAYAAQAAAAsAAAACAAYAAQAAAAsAAAABAAYAAQAAAAsAAAABAAUAAQAAAAsAAAACAAUAAQAAAAsAAAACAAQAAQAAAAsAAAADAAQAAQAAAAsAAAADAAMAAQAAAAsAAAADAAIAAQAAAAsAAAADAAEAAQAAAAsAAAATAAEAAQAAAAsAAAATAAIAAQAAAAsAAAATAAMAAQAAAAsAAAAUAAMAAQAAAAsAAAAVAAMAAQAAAAsAAAAWAAMAAQAAAAsAAAAXAAMAAQAAAAsAAAAXAAIAAQAAAAsAAAAXAAEAAQAAAAsAAAAWAAEAAQAAAAsAAAAVAAEAAQAAAAsAAAAUAAEAAQAAAAsAAAAYAAYAAQAAAAsAAAAYAAcAAQAAAAsAAAAYAAgAAQAAAAsAAAAYAAkAAQAAAAsAAAAYAAoAAQAAAAsAAAAZAAoAAQAAAAsAAAAaAAoAAQAAAAsAAAAbAAoAAQAAAAsAAAAcAAoAAQAAAAsAAAAdAAoAAQAAAAsAAAAdAAYAAQAAAAsAAAAcAAYAAQAAAAsAAAAbAAYAAQAAAAsAAAAaAAYAAQAAAAsAAAAZAAYAAQAAAAsAAAAMAA8AAQAAAAsAAAAMAA4AAQAAAAsAAAALAA4AAQAAAAsAAAALAA0AAQAAAAsAAAAKAA0AAQAAAAsAAAAKAAwAAQAAAAsAAAAJAAwAAQAAAAsAAAAJAAsAAQAAAAsAAAAIAAsAAQAAAAsAAAAHAAoAAQAAAAsAAAAHAAsAAQAAAAsAAAAGAAsAAQAAAAsAAAAGAAwAAQAAAAsAAAAGAA0AAQAAAAsAAAAFAA0AAQAAAAsAAAAFAA4AAQAAAAsAAAAEAA4AAQAAAAsAAAAEAA8AAQAAAAsAAAAEABAAAQAAAAsAAAAAAA0AAQAAAAsAAAABAA0AAQAAAAsAAAACAA0AAQAAAAsAAAACAAwAAQAAAAsAAAADAAwAAQAAAAsAAAADAAsAAQAAAAsAAAADAAoAAQAAAAsAAAADAAkAAQAAAAsAAAACAAkAAQAAAAsAAAACAAgAAQAAAAsAAAABAAgAAQAAAAsAAAABAAkAAQAAAAsAAAAAAAkAAQAAAAsAAAALAA8AAQAAAAsAAAAKABAAAQAAAAsAAAA=")
tile_set = ExtResource("1_a3f0a")

[node name="Rocks" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAMAAgAAAAMAAAACAA8AAgAAAAEAAAAYAAIAAgAAAAEAAAAbAA8AAgAAAAMAAAAcAA4AAgAAAAIAAAA=")
tile_set = ExtResource("1_a3f0a")

[node name="Sand" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAJAAUAAQAGAAEAAAAJAAQAAQAGAAEAAAAJAAMAAQAGAAEAAAAJAAIAAQAGAAEAAAAJAAEAAQAGAAEAAAAIAAUAAQAGAAEAAAAIAAQAAQAGAAEAAAAIAAMAAQAGAAEAAAAIAAIAAQAGAAEAAAAIAAEAAQAGAAEAAAAHAAUAAQAGAAEAAAAHAAQAAQAGAAEAAAAHAAMAAQAGAAEAAAAHAAIAAQAGAAEAAAAHAAEAAQAGAAEAAAAGAAUAAQAGAAEAAAAGAAQAAQAGAAEAAAAGAAMAAQAGAAEAAAAGAAIAAQAGAAEAAAAGAAEAAQAGAAEAAAAFAAUAAQAGAAEAAAAFAAQAAQAGAAEAAAAFAAMAAQAGAAEAAAAFAAIAAQAGAAEAAAAFAAEAAQAGAAEAAAAEAAUAAQAGAAEAAAAEAAQAAQAGAAEAAAAEAAMAAQAGAAEAAAAEAAIAAQAGAAEAAAAEAAEAAQAGAAEAAAADAAUAAQAGAAEAAAADAAQAAQAGAAEAAAADAAMAAQAFAAEAAAADAAIAAQAFAAEAAAADAAEAAQAFAAAAAAAcAAoAAQAGAAIAAAAcAAkAAQAGAAEAAAAcAAgAAQAGAAEAAAAcAAcAAQAGAAEAAAAcAAYAAQAGAAAAAAAbAAoAAQAGAAIAAAAbAAkAAQAGAAEAAAAbAAgAAQAGAAEAAAAbAAcAAQAGAAEAAAAbAAYAAQAGAAAAAAAaAAoAAQAGAAIAAAAaAAkAAQAGAAEAAAAaAAgAAQAGAAEAAAAaAAcAAQAGAAEAAAAaAAYAAQAGAAAAAAAZAAoAAQAGAAIAAAAZAAkAAQAGAAEAAAAZAAgAAQAGAAEAAAAZAAcAAQAGAAEAAAAZAAYAAQAGAAAAAAAYAAoAAQAFAAIAAAAYAAkAAQAFAAEAAAAYAAgAAQAFAAEAAAAYAAcAAQAFAAEAAAAYAAYAAQAFAAAAAAAdAAoAAQAHAAIAAAAdAAkAAQAHAAEAAAAdAAgAAQAHAAEAAAAdAAcAAQAHAAEAAAAIABAAAQAGAAIAAAAIAA8AAQAGAAEAAAAHABAAAQAGAAIAAAAHAA8AAQAGAAEAAAAGABAAAQAGAAIAAAAGAA8AAQAGAAEAAAAFABAAAQAGAAIAAAAFAA8AAQAGAAEAAAAEABAAAQAFAAIAAAAEAA8AAQAFAAEAAAAIAA4AAQAGAAEAAAAHAA4AAQAGAAEAAAAGAA4AAQAGAAEAAAAFAA4AAQAGAAEAAAAEAA4AAQAFAAAAAAAXAAMAAQAHAAIAAAAXAAIAAQAHAAEAAAAXAAEAAQAHAAAAAAAWAAMAAQAGAAIAAAAWAAIAAQAGAAEAAAAWAAEAAQAGAAAAAAAVAAMAAQAGAAIAAAAVAAIAAQAGAAEAAAAVAAEAAQAGAAAAAAAUAAMAAQAGAAIAAAAUAAIAAQAGAAEAAAAUAAEAAQAGAAAAAAATAAMAAQAFAAIAAAATAAIAAQAFAAEAAAATAAEAAQAFAAAAAAACAA0AAQAHAAIAAAACAAwAAQAGAAEAAAACAAsAAQAGAAEAAAACAAoAAQAGAAEAAAACAAkAAQAGAAEAAAABAA0AAQAGAAIAAAABAAwAAQAGAAEAAAABAAsAAQAGAAEAAAABAAoAAQAGAAEAAAABAAkAAQAGAAEAAAAAAA0AAQAFAAIAAAAAAAwAAQAFAAEAAAAAAAsAAQAFAAEAAAAAAAoAAQAFAAEAAAAAAAkAAQAFAAAAAAAKAAYAAQAHAAIAAAAKAAUAAQAHAAEAAAAKAAQAAQAHAAEAAAAKAAMAAQAHAAEAAAAKAAIAAQAGAAEAAAAKAAEAAQAGAAEAAAAJAAYAAQAGAAIAAAAIAAYAAQAGAAIAAAAHAAYAAQAGAAIAAAAGAAYAAQAGAAIAAAAFAAYAAQAGAAIAAAAEAAYAAQAGAAIAAAADAAYAAQAGAAIAAAACAAQAAQAFAAAAAAACAAUAAQAGAAEAAAABAAUAAQAFAAAAAAABAAYAAQAFAAIAAAACAAYAAQAGAAIAAAAMAAEAAQAHAAIAAAAMAAAAAQAHAAAAAAALAAEAAQAGAAEAAAALAAAAAQAGAAAAAAAKAAAAAQAGAAAAAAAJAAAAAQAGAAAAAAAIAAAAAQAGAAAAAAAHAAAAAQAGAAAAAAALAAIAAQAHAAIAAAAGAAAAAQAGAAAAAAAEAAAAAQAFAAAAAAAFAAAAAQAGAAAAAAADAAwAAQAHAAIAAAADAAsAAQAHAAEAAAADAAoAAQAHAAEAAAADAAkAAQAHAAAAAAACAAgAAQAHAAAAAAABAAgAAQAFAAAAAAAIAA0AAQAGAAEAAAAHAA0AAQAGAAEAAAAGAA0AAQAGAAEAAAAFAA0AAQAFAAAAAAAKABAAAQAHAAIAAAAKAA8AAQAGAAEAAAAKAA4AAQAGAAEAAAAJABAAAQAGAAIAAAAJAA8AAQAGAAEAAAAJAA4AAQAGAAEAAAAMAA8AAQAHAAIAAAAMAA4AAQAHAAAAAAALAA8AAQAGAAIAAAALAA4AAQAGAAEAAAALAA0AAQAHAAAAAAAKAA0AAQAGAAEAAAAJAA0AAQAGAAEAAAAKAAwAAQAHAAAAAAAJAAwAAQAGAAEAAAAIAAwAAQAGAAEAAAAHAAwAAQAGAAEAAAAGAAwAAQAFAAEAAAAJAAsAAQAHAAAAAAAIAAsAAQAGAAEAAAAHAAsAAQAGAAEAAAAGAAsAAQAFAAAAAAAIAAoAAQAHAAAAAAAHAAoAAQAFAAAAAAAdAAYAAQAHAAAAAAA=")
tile_set = ExtResource("1_a3f0a")

[node name="Land rocks" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAwAAQALAAUAAAAAAAwAAQALAAMAAAABAAsAAQALAAEAAAABAAoAAQALAAIAAAAAAAsAAQALAAIAAAAAAAoAAQALAAQAAAAGABAAAQALAAEAAAAGAA8AAQALAAIAAAAFABAAAQAKAAIAAAAFAA8AAQAKAAAAAAAbAAkAAQAMAAUAAAAbAAgAAQALAAIAAAAbAAcAAQALAAQAAAAaAAkAAQALAAUAAAAaAAgAAQALAAIAAAAaAAcAAQALAAAAAAAZAAkAAQAKAAMAAAAZAAgAAQALAAEAAAAZAAcAAQALAAAAAAAYAAcAAQAKAAQAAAAcAAgAAQAMAAMAAAAcAAcAAQAMAAAAAAAYAAgAAQAKAAMAAAAIAAQAAQALAAEAAAAIAAMAAQALAAEAAAAIAAIAAQALAAIAAAAHAAQAAQALAAEAAAAHAAMAAQALAAIAAAAHAAIAAQALAAEAAAAGAAQAAQALAAIAAAAGAAMAAQALAAEAAAAGAAIAAQALAAEAAAAFAAQAAQALAAEAAAAFAAMAAQALAAIAAAAFAAIAAQALAAEAAAAEAAQAAQAKAAIAAAAEAAMAAQAKAAEAAAAEAAIAAQAKAAAAAAAJAAQAAQAMAAUAAAAJAAMAAQAMAAIAAAAJAAIAAQAMAAEAAAAIAAEAAQALAAAAAAAHAAEAAQALAAAAAAAGAAEAAQALAAQAAAAHAAUAAQALAAUAAAAGAAUAAQALAAUAAAAFAAUAAQALAAMAAAAEAAUAAQAKAAUAAAAIAAUAAQAMAAUAAAAFAAEAAQAKAAQAAAACAAwAAQAMAAUAAAACAAsAAQAMAAEAAAACAAoAAQAMAAEAAAACAAkAAQAMAAAAAAABAAkAAQAKAAAAAAAKABEAAQAMAAUAAAAKABAAAQAMAAEAAAAKAA8AAQAMAAEAAAAKAA4AAQAMAAQAAAAJABEAAQALAAMAAAAJABAAAQALAAEAAAAJAA8AAQALAAEAAAAJAA4AAQALAAEAAAAIABEAAQALAAUAAAAIABAAAQALAAEAAAAIAA8AAQALAAIAAAAIAA4AAQALAAIAAAAHABEAAQALAAUAAAAHABAAAQALAAEAAAAHAA8AAQALAAIAAAAHAA4AAQALAAIAAAAGABEAAQALAAUAAAAGAA4AAQAKAAQAAAAJAA0AAQAMAAIAAAAJAAwAAQAMAAQAAAAIAA0AAQALAAEAAAAIAAwAAQALAAEAAAAHAA0AAQAKAAIAAAAHAAwAAQAKAAEAAAAIAAsAAQAMAAQAAAAHAAsAAQAKAAQAAAAJAAEAAQAMAAAAAAAFABEAAQAKAAUAAAA=")
tile_set = ExtResource("1_a3f0a")

[node name="Stairs" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAHAAUAAQAMAAcAAAAGAAUAAQALAAcAAAAFAAUAAQAKAAcAAAAcAAgAAQANAAcAAAA=")
tile_set = ExtResource("1_a3f0a")

[node name="Grass" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAoAAQABAAEAAAAAAAoAAQABAAAAAAABAAsAAQABAAIAAAAAAAsAAQABAAIAAAAcAAcAAQACAAMAAAAbAAcAAQABAAAAAAAaAAcAAQABAAAAAAAZAAcAAQABAAAAAAAYAAcAAQAAAAMAAAAbAAgAAQACAAIAAAAaAAgAAQABAAIAAAAZAAgAAQAAAAIAAAAIAAQAAQACAAIAAAAIAAMAAQABAAEAAAAIAAIAAQABAAEAAAAHAAQAAQABAAIAAAAHAAMAAQABAAEAAAAHAAIAAQABAAEAAAAGAAQAAQABAAIAAAAGAAMAAQABAAEAAAAGAAIAAQABAAEAAAAFAAQAAQABAAIAAAAFAAMAAQABAAEAAAAFAAIAAQABAAEAAAAEAAQAAQAAAAIAAAAEAAMAAQAAAAEAAAAEAAIAAQAAAAAAAAAJAAMAAQACAAIAAAAJAAIAAQACAAEAAAAJAAEAAQACAAAAAAAIAAEAAQABAAAAAAAHAAEAAQABAAAAAAAGAAEAAQABAAAAAAAFAAEAAQAAAAAAAAACAAsAAQACAAIAAAACAAoAAQACAAEAAAACAAkAAQACAAAAAAABAAkAAQAAAAAAAAAKABAAAQACAAIAAAAKAA8AAQACAAEAAAAJABAAAQABAAIAAAAJAA8AAQABAAEAAAAJAA4AAQABAAEAAAAIABAAAQABAAIAAAAIAA8AAQABAAEAAAAIAA4AAQABAAEAAAAIAA0AAQABAAEAAAAIAAwAAQABAAEAAAAIAAsAAQACAAAAAAAHABAAAQABAAIAAAAHAA8AAQABAAEAAAAHAA4AAQABAAEAAAAHAA0AAQAAAAEAAAAHAAwAAQAAAAEAAAAHAAsAAQAAAAAAAAAGABAAAQABAAIAAAAGAA8AAQABAAEAAAAGAA4AAQAAAAAAAAAJAA0AAQACAAEAAAAJAAwAAQACAAAAAAAKAA4AAQACAAAAAAAFABAAAQAAAAIAAAAFAA8AAQAAAAAAAAA=")
tile_set = ExtResource("1_a3f0a")

[node name="Trees" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAEAAEACgAAAAAAAAAJAAIACgAAAAAAAAAEAAMACgAAAAAAAAAKAA8ACgAAAAAAAAAIAAoACgAAAAAAAAAGAA0ACgAAAAAAAAAbAAcACgAAAAAAAAAIAAEACgAAAAAAAAACAAgACgAAAAAAAAA=")
tile_set = ExtResource("1_a3f0a")

[node name="Buildings" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAGAAEABwAAAAAAAAAZAAYABQAAAAAAAAABAAkACAAAAAAAAAAVAAIAAwAAAAIAAAAGAA8ACwAAAAAAAAAIAAwACwAAAAAAAAA=")
tile_set = ExtResource("1_a3f0a")

[node name="New4" type="TileMapLayer" parent="."]
tile_set = ExtResource("1_a3f0a")

[node name="Main menu map" type="Node2D" parent="."]
visible = false
position = Vector2(-11, -4)

[node name="TileMapLayer" type="TileMapLayer" parent="Main menu map"]

[node name="Main menu" type="Control" parent="."]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_33ery")
new_game_scene = ExtResource("3_elvaw")
options_scene = ExtResource("4_06me2")

[node name="Button Container" type="VBoxContainer" parent="Main menu"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -212.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(2, 2)
theme_override_constants/separation = 10
alignment = 1

[node name="New game" type="TextureButton" parent="Main menu/Button Container"]
layout_mode = 2
texture_normal = ExtResource("3_8c42l")
texture_pressed = ExtResource("4_caxi6")
texture_hover = ExtResource("2_un5u3")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label_new_button" type="Label" parent="Main menu/Button Container/New game"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0833333
anchor_top = 0.1875
anchor_right = 0.921875
anchor_bottom = 0.6875
offset_top = -0.5
offset_bottom = -0.5
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = SubResource("FontVariation_smhxl")
text = "New game"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Options" type="TextureButton" parent="Main menu/Button Container"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("3_8c42l")
texture_pressed = ExtResource("4_caxi6")
texture_hover = ExtResource("2_un5u3")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label_option_button" type="Label" parent="Main menu/Button Container/Options"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.078125
anchor_top = 0.1875
anchor_right = 0.927083
anchor_bottom = 0.734375
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = SubResource("FontVariation_smhxl")
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="Exit" type="TextureButton" parent="Main menu/Button Container"]
layout_mode = 2
texture_normal = ExtResource("4_0mr1f")
texture_pressed = ExtResource("7_f3o2h")
texture_hover = ExtResource("2_un5u3")
stretch_mode = 0
metadata/_edit_group_ = true

[node name="Label_exit_button" type="Label" parent="Main menu/Button Container/Exit"]
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0703125
anchor_top = 0.1875
anchor_right = 0.919271
anchor_bottom = 0.734375
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_fonts/font = SubResource("FontVariation_smhxl")
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true
metadata/_edit_use_anchors_ = true

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="button_down" from="Main menu/Button Container/New game" to="Main menu/Button Container/New game" method="_on_button_down"]
[connection signal="button_up" from="Main menu/Button Container/New game" to="Main menu" method="_on_new_game_button_up"]
[connection signal="button_up" from="Main menu/Button Container/New game" to="Main menu/Button Container/New game" method="_on_button_up"]
[connection signal="pressed" from="Main menu/Button Container/New game" to="Main menu/Button Container/New game" method="_on_pressed"]
[connection signal="button_down" from="Main menu/Button Container/Options" to="Main menu/Button Container/Options" method="_on_button_down"]
[connection signal="button_up" from="Main menu/Button Container/Options" to="Main menu" method="_on_options_button_up"]
[connection signal="button_up" from="Main menu/Button Container/Options" to="Main menu/Button Container/Options" method="_on_button_up"]
[connection signal="pressed" from="Main menu/Button Container/Options" to="Main menu/Button Container/Options" method="_on_pressed"]
[connection signal="button_down" from="Main menu/Button Container/Exit" to="Main menu/Button Container/Exit" method="_on_button_down"]
[connection signal="button_up" from="Main menu/Button Container/Exit" to="Main menu" method="_on_exit_button_up"]
[connection signal="button_up" from="Main menu/Button Container/Exit" to="Main menu/Button Container/Exit" method="_on_button_up"]
[connection signal="pressed" from="Main menu/Button Container/Exit" to="Main menu/Button Container/Exit" method="_on_pressed"]
